--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 - Location: 'assets/hero-background.jpg'
                 - Description: A high-quality, futuristic background image. Think abstract neural networks, glowing data streams, or a subtle digital circuit pattern. It should be dark to make the white text pop.
             -->
-            <div class="absolute inset-0 bg-cover bg-center z-0" style="background-image: url('https://placehold.co/1920x1080/000000/FFFFFF?text=Futuristic+Background');">
+            <div class="absolute inset-0 bg-cover bg-center z-0" style="background-image: url('assets/hero-background.jpg');">
                 <div class="absolute inset-0 bg-black opacity-60"></div>
             </div>
             
