--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             - Location: 'assets/social-automation.gif'
                             - Description: A sleek, animated GIF showing social media icons (Insta, FB, etc.) with glowing lines connecting to a central brain or hub icon, symbolizing automation.
                         -->
-                        <img src="https://placehold.co/800x600/1F2937/FFFFFF?text=Social+Automation+Graphic" alt="Social Media Automation" class="mt-6 rounded-lg w-full h-auto object-cover">
+                        <img src="assets/social-automation.gif" alt="Social Media Automation" class="mt-6 rounded-lg w-full h-auto object-cover">
                     </div>
 
                     <!-- Feature 2: AI Content Creation -->
@@ -188,7 +188,7 @@
                             - Location: 'assets/ai-video.jpg'
                             - Description: A split-screen image. Left side: a professional headshot. Right side: a still from a generated video of the same person speaking, with subtle wave-form overlays.
                         -->
-                        <img src="https://placehold.co/800x600/1F2937/FFFFFF?text=AI+Video+Generation" alt="AI Content Creation" class="mt-6 rounded-lg w-full h-auto object-cover">
+                        <img src="assets/ai-video.jpg" alt="AI Content Creation" class="mt-6 rounded-lg w-full h-auto object-cover">
                     </div>
                     
                     <!-- Feature 3: Chatbots & PWAs -->
@@ -205,7 +205,7 @@
                             - Location: 'assets/chatbot-mockup.png'
                             - Description: A high-resolution smartphone mockup (PNG with transparent background) showing a sleek, modern chat interface within a beautiful website design.
                         -->
-                        <img src="https://placehold.co/800x600/1F2937/FFFFFF?text=Website+with+Chatbot" alt="Chatbot Mockup" class="mt-6 rounded-lg w-full h-auto object-cover">
+                        <img src="assets/chatbot-mockup.png" alt="Chatbot Mockup" class="mt-6 rounded-lg w-full h-auto object-cover">
                     </div>
 
                     <!-- Feature 4: Productivity -->
@@ -222,7 +222,7 @@
                             - Location: 'assets/productivity-dashboard.jpg'
                             - Description: A clean, minimalist graphic showing icons for a calendar, email, and to-do list connected by elegant lines, representing seamless integration.
                         -->
-                        <img src="https://placehold.co/800x600/1F2937/FFFFFF?text=Productivity+Graphic" alt="Productivity Dashboard" class="mt-6 rounded-lg w-full h-auto object-cover">
+                        <img src="assets/productivity-dashboard.jpg" alt="Productivity Dashboard" class="mt-6 rounded-lg w-full h-auto object-cover">
                     </div>
                 </div>
             </div>
@@ -236,7 +236,7 @@
                     - Location: 'assets/parallax-background.jpg'
                     - Description: A beautiful, high-resolution photo. A cityscape at night, a satellite view of Earth, or an artistic shot of fiber optics would work well. It needs to look good when zoomed in.
                 -->
-                <div class="parallax-background" style="background-image: url('https://placehold.co/1920x1080/111827/FFFFFF?text=Global+Connections');"></div>
+                <div class="parallax-background" style="background-image: url('assets/parallax-background.jpg');"></div>
                 <div class="parallax-text-container" style="position: relative; height: 100%; width: 100%;">
                     <h2 id="parallax-text" class="parallax-text">AUTOMATE</h2>
                 </div>
