--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide-react@latest/dist/umd/lucide-react.js"></script>
-    <script src="https://unpkg.com/lucide-icons@latest/dist/umd/lucide.js"></script>
+    <script src="https://unpkg.com/lucide@"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
 
 
     <style>
