--- a/signin.html
+++ b/signin.html
@@ -74,7 +74,9 @@
     </main>
 
     <script>
-        lucide.createIcons();
+        if (typeof lucide !== 'undefined') {
+            lucide.createIcons();
+        }
 
         // --- Login Form Logic ---
         const loginForm = document.getElementById('login-form');
