--- a/dashboard.html
+++ b/dashboard.html
@@ -83,6 +83,9 @@
         </main>
 
         <script>
+            if (typeof lucide !== 'undefined') {
+                lucide.createIcons();
+            }
             lucide.createIcons();
 
             // --- UI Elements ---
