--- a/dashboard.html
+++ b/dashboard.html
@@ -114,14 +114,19 @@
 
             // --- OAUTH FLOW TRIGGER ---
             connectButton.addEventListener('click', () => {
-                // This is the URL you construct to start the login flow.
-                // Replace YOUR_APP_ID and YOUR_REDIRECT_URI with the values from your Meta Dev App.
+                // IMPORTANT: Replace 'YOUR_FACEBOOK_APP_ID' with your actual App ID from Meta Developers
                 const appId = 'YOUR_FACEBOOK_APP_ID'; 
-                const redirectUri = 'https://your-site.netlify.app/auth/callback';
+                // IMPORTANT: Replace 'https://your-site.netlify.app/auth/callback' with the exact Redirect URI you added in Meta Developers
+                // If testing locally, use 'http://localhost:5500/auth/callback.html' or your local server's address
+                const redirectUri = 'https://your-site.netlify.app/auth/callback.html'; // Changed to .html as per common practice
+
+                // These are the permissions your app is requesting from the user
                 const scope = 'pages_show_list,instagram_basic,instagram_content_publish';
 
+                // Construct the full OAuth URL
                 const authUrl = `https://www.facebook.com/v18.0/dialog/oauth?client_id=${appId}&redirect_uri=${redirectUri}&scope=${scope}&response_type=code`;
 
+                // Redirect the user to Meta's authorization page
                 window.location.href = authUrl;
             });
 
