--- a/dashboard.html
+++ b/dashboard.html
@@ -115,10 +115,10 @@
             // --- OAUTH FLOW TRIGGER ---
             connectButton.addEventListener('click', () => {
                 // IMPORTANT: Replace 'YOUR_FACEBOOK_APP_ID' with your actual App ID from Meta Developers
-                const appId = 'YOUR_FACEBOOK_APP_ID'; 
+                const appId = '1034637958867552'; 
                 // IMPORTANT: Replace 'https://your-site.netlify.app/auth/callback' with the exact Redirect URI you added in Meta Developers
                 // If testing locally, use 'http://localhost:5500/auth/callback.html' or your local server's address
-                const redirectUri = 'https://your-site.netlify.app/auth/callback.html'; // Changed to .html as per common practice
+                const redirectUri = 'https://deskill.netlify.app/auth/callback.html'; // Changed to .html as per common practice
 
                 // These are the permissions your app is requesting from the user
                 const scope = 'pages_show_list,instagram_basic,instagram_content_publish';
