--- a/dashboard.html
+++ b/dashboard.html
@@ -30,7 +30,7 @@
                         <a href="contact.html" class="hover:text-sky-400 transition-colors">Contact</a>
                     </nav>
                     <div class="flex items-center space-x-4">
-                        <a href="index.html" class="text-sm hover:text-red-400 transition-colors">Sign Out</a>
+                        <a href="#" id="sign-out-btn" class="text-sm hover:text-red-400 transition-colors">Sign Out</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <div class="bg-emerald-900/50 border border-emerald-500 text-emerald-300 px-4 py-3 rounded-lg mb-6 flex items-center gap-3">
                             <i data-lucide="check-circle"></i>
                             <!-- The username would be dynamically inserted by your backend -->
-                            <span>Instagram Account Connected: <strong id="insta-username"></strong></span>
+                            <span>Instagram Account Connected: <strong id="insta-username">@bolzy99</strong></span> <!-- Hardcoded for testing -->
                         </div>
 
                         <form id="insta-post-form">
@@ -96,26 +96,60 @@
             const buttonText = document.getElementById('button-text');
             const spinner = document.getElementById('loading-spinner');
             const instaUsernameSpan = document.getElementById('insta-username');
+            const signOutButton = document.getElementById('sign-out-btn');
 
-            // --- BACKEND INTEGRATION POINT ---
-            // In a real app, you would check with your backend if the user has a valid token.
-            // For this demo, we'll simulate it. Set this to `true` to see the connected view.
-            const isUserConnected = false; 
-
-            if (isUserConnected) {
-                disconnectedView.classList.add('hidden');
-                connectedView.classList.remove('hidden');
-                instaUsernameSpan.textContent = '@bolzy99'; // This would come from your database
-            } else {
-                disconnectedView.classList.remove('hidden');
-                connectedView.classList.add('hidden');
+            // --- Function to update UI based on connection status ---
+            function updateInstagramUI(isConnected, username = '') {
+                if (isConnected) {
+                    disconnectedView.classList.add('hidden');
+                    connectedView.classList.remove('hidden');
+                    instaUsernameSpan.textContent = `@${username}`;
+                } else {
+                    disconnectedView.classList.remove('hidden');
+                    connectedView.classList.add('hidden');
+                    instaUsernameSpan.textContent = '';
+                }
             }
+
+            // --- Check URL parameters on page load ---
+            const urlParams = new URLSearchParams(window.location.search);
+            const authStatus = urlParams.get('status');
+            const authCode = urlParams.get('code');
+            const authErrorMessage = urlParams.get('message');
+
+            let isUserConnected = sessionStorage.getItem('instagramConnected') === 'true';
+            let connectedUsername = sessionStorage.getItem('instagramUsername') || 'bolzy99'; // Default for testing
+
+            if (authStatus === 'success' && authCode) {
+                // User just successfully authorized via Meta
+                isUserConnected = true;
+                // In a real app, you'd fetch the actual username from your backend after token exchange
+                // For now, we'll use a placeholder or the test username
+                connectedUsername = 'bolzy99'; 
+                sessionStorage.setItem('instagramConnected', 'true');
+                sessionStorage.setItem('instagramUsername', connectedUsername);
+                statusMessage.textContent = 'Instagram connected successfully!';
+                statusMessage.classList.add('text-emerald-400');
+                // Clear the URL parameters to prevent re-processing on refresh
+                window.history.replaceState({}, document.title, window.location.pathname); 
+
+            } else if (authStatus === 'error') {
+                statusMessage.textContent = `Connection failed: ${decodeURIComponent(authErrorMessage || 'Unknown error')}`;
+                statusMessage.classList.add('text-red-400');
+                sessionStorage.setItem('instagramConnected', 'false');
+                sessionStorage.removeItem('instagramUsername');
+                // Clear the URL parameters
+                window.history.replaceState({}, document.title, window.location.pathname);
+            }
+
+            // Update UI based on current state
+            updateInstagramUI(isUserConnected, connectedUsername);
 
             // --- OAUTH FLOW TRIGGER ---
             connectButton.addEventListener('click', () => {
                 // IMPORTANT: Replace 'YOUR_FACEBOOK_APP_ID' with your actual App ID from Meta Developers
                 const appId = '1034637958867552'; 
-                // IMPORTANT: Replace 'https://your-site.netlify.app/auth/callback' with the exact Redirect URI you added in Meta Developers
+                // IMPORTANT: Replace 'https://your-site.netlify.app/auth/callback.html' with the exact Redirect URI you added in Meta Developers
                 // If testing locally, use 'http://localhost:5500/auth/callback.html' or your local server's address
                 const redirectUri = 'https://deskill.netlify.app/auth/callback.html'; // Changed to .html as per common practice
 
@@ -133,8 +167,77 @@
             // --- Instagram Posting Logic ---
             postForm.addEventListener('submit', async function(event) {
                 event.preventDefault();
-                // ... (The rest of the form submission logic remains the same) ...
+                buttonText.textContent = 'Generating...';
+                spinner.classList.remove('hidden');
+                statusMessage.textContent = ''; // Clear previous status
+
+                const intent = document.getElementById('intent').value;
+
+                if (!intent) {
+                    statusMessage.textContent = 'Please describe your post intent.';
+                    statusMessage.classList.remove('text-emerald-400', 'text-red-400');
+                    statusMessage.classList.add('text-yellow-400');
+                    buttonText.textContent = 'Generate & Post to Instagram';
+                    spinner.classList.add('hidden');
+                    return;
+                }
+
+                // In a real scenario, you would send the 'intent' and the stored
+                // Instagram access token/ID to your n8n workflow.
+                // For now, we'll simulate the AI generation and posting.
+
+                try {
+                    // Simulate API call to n8n workflow for content generation and posting
+                    // Replace 'YOUR_N8N_WEBHOOK_URL' with your actual n8n webhook URL
+                    const n8nWebhookUrl = 'YOUR_N8N_WEBHOOK_URL'; 
+                    // You would also send the user's instagram token/ID from sessionStorage or a more secure backend store
+                    const response = await fetch(n8nWebhookUrl, {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                        },
+                        body: JSON.stringify({
+                            intent: intent,
+                            // In a real app, you'd retrieve the actual Instagram token/ID here
+                            // For testing, n8n might use a hardcoded one or one obtained from a previous manual step
+                            instagramAccessToken: sessionStorage.getItem('instagramAccessToken'), // Placeholder
+                            instagramBusinessId: sessionStorage.getItem('instagramBusinessId') // Placeholder
+                        }),
+                    });
+
+                    if (response.ok) {
+                        const result = await response.json();
+                        statusMessage.textContent = `Post generated and sent to Instagram! Message: ${result.message || 'Success'}`;
+                        statusMessage.classList.remove('text-red-400', 'text-yellow-400');
+                        statusMessage.classList.add('text-emerald-400');
+                        document.getElementById('intent').value = ''; // Clear textarea
+                    } else {
+                        const errorData = await response.json();
+                        statusMessage.textContent = `Error posting: ${errorData.message || response.statusText}`;
+                        statusMessage.classList.remove('text-emerald-400', 'text-yellow-400');
+                        statusMessage.classList.add('text-red-400');
+                    }
+                } catch (error) {
+                    console.error('Error:', error);
+                    statusMessage.textContent = 'An unexpected error occurred. Please try again.';
+                    statusMessage.classList.remove('text-emerald-400', 'text-yellow-400');
+                    statusMessage.classList.add('text-red-400');
+                } finally {
+                    buttonText.textContent = 'Generate & Post to Instagram';
+                    spinner.classList.add('hidden');
+                }
             });
+
+            // --- Sign Out Logic ---
+            signOutButton.addEventListener('click', (event) => {
+                event.preventDefault();
+                sessionStorage.removeItem('instagramConnected');
+                sessionStorage.removeItem('instagramUsername');
+                sessionStorage.removeItem('instagramAccessToken'); // Clear any stored tokens
+                sessionStorage.removeItem('instagramBusinessId'); // Clear any stored IDs
+                window.location.href = 'index.html'; // Redirect to home or sign-in page
+            });
+
         </script>
     </body>
     </html>
