--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
         const chatMessages = document.getElementById('chat-messages');
 
         // IMPORTANT: Replace with your actual n8n webhook URL for the AI chatbot
-        const N8N_CHAT_WEBHOOK_URL = 'https://suitable-rapidly-terrier.ngrok-free.app/webhook-test/skynet'; 
+        const N8N_CHAT_WEBHOOK_URL = https://suitable-rapidly-terrier.ngrok-free.app/webhook-test/skynet; 
 
         // Toggle chat modal visibility
         supportButton.addEventListener('click', () => {
